--- a/stylos/style.css
+++ b/stylos/style.css
@@ -63,7 +63,7 @@ a {
   font-size: 13px;
 }
 
-.fa-envelope  {
+.fa-envelope {
   transform: translateX(8px) scale(1.5);
 }
 
@@ -76,8 +76,6 @@ a {
 .fa-envelope:hover {
   transform: scale(1.4);
 }
-
-
 
 .logo:hover {
   transform: translateX(20px);
@@ -102,8 +100,6 @@ a {
     display: none;
     color: #fff;
   }
-
- 
 
   .nav {
     width: 100%;
@@ -375,7 +371,6 @@ a {
     overflow: hidden;
   }
 
-
   .tarject > * img {
     transition: 0.6s;
   }
@@ -400,7 +395,7 @@ a {
   }
 
   .infoUno h2 {
-   font-size: 20px;
+    font-size: 20px;
   }
 
   .infoUno p {
@@ -481,7 +476,7 @@ a {
     margin-bottom: 20px;
   }
 
-  .content-carousel-slide  >* img  {
+  .content-carousel-slide > * img {
     width: 100%;
     height: 600px;
   }
@@ -514,7 +509,9 @@ a {
     background-color: #2ea3f2;
   }
 
-  .punto-left, .punto-middle, .punto-right {
+  .punto-left,
+  .punto-middle,
+  .punto-right {
     width: 12px;
     height: 12px;
     background-color: #2ea3f2;
@@ -522,10 +519,10 @@ a {
     animation: bounce 1.5s infinite;
   }
 
-  
-
   @keyframes bounce {
-    0%, 80%, 100% {
+    0%,
+    80%,
+    100% {
       transform: scale(1);
     }
     40% {
@@ -562,7 +559,6 @@ a {
     display: flex;
     text-align: justify;
     align-items: center;
-
   }
 
   .footer-info-contact {
@@ -582,7 +578,7 @@ a {
     width: 350px;
     height: 320px;
     background-color: #0f1d3e;
-    border:  2px solid #ffffff17;
+    border: 2px solid #ffffff17;
   }
 
   .card-footer-top {
@@ -598,7 +594,7 @@ a {
     padding: 0 20px;
   }
 
-  .card-footer-top >* {
+  .card-footer-top > * {
     margin: 0 auto;
     margin-left: 0;
     font-size: 25px;
@@ -613,13 +609,13 @@ a {
   }
 
   .card-input-uno {
-    width: 250px;
+    width: 300px;
     height: 50px;
     border: none;
     outline: none;
     background-color: #ffffff28;
     color: #fff;
-    padding-left: 10px;   
+    padding-left: 10px;
     margin-top: 10px;
   }
 
@@ -628,7 +624,7 @@ a {
   }
 
   .card-input-dos {
-    width: 250px;
+    width: 300px;
     height: 100px;
     border: none;
     outline: none;
@@ -641,10 +637,7 @@ a {
 
   .card-input-dos::placeholder {
     color: #fff;
-
   }
-
-  
 
   .card-footer-end {
     width: 260px;
@@ -659,7 +652,7 @@ a {
     gap: 10px;
     margin: 0 auto;
     margin-top: 20px;
-    transition: .3s ease;
+    transition: 0.3s ease;
   }
 
   .card-input-tres {
@@ -668,7 +661,7 @@ a {
     border: none;
     outline: none;
     background: none;
-    color: #fff;   
+    color: #fff;
   }
 
   .card-input-tres::placeholder {
@@ -686,8 +679,6 @@ a {
     color: #fff;
     font-weight: bold;
   }
-
-  
 }
 
 @media (max-width: 767px) {
@@ -735,6 +726,7 @@ a {
     top: 40%;
     left: 20px;
     align-items: center;
+    font-size: 30px;
   }
 
   .line {
@@ -755,7 +747,8 @@ a {
     gap: 50%;
   }
 
-  #nosotros, #evento {
+  #nosotros,
+  #evento {
     color: black;
   }
 
@@ -771,7 +764,7 @@ a {
   }
 
   .menu {
-        margin: 0;
+    margin: 0;
     padding: 0;
   }
 
@@ -810,7 +803,6 @@ a {
   .sub-menu-uno.active {
     background-color: #2ea3f2;
     height: 150px;
- 
   }
 
   #evento.active {
@@ -876,10 +868,120 @@ a {
     place-items: center;
   }
 
-  .content-card >* img {
+  .content-card > * img {
     margin-bottom: 20px;
     width: 100%;
     height: 300px;
     max-width: 500px;
+  }
+
+  .informacion {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    height: 100vh;
+    flex-direction: column;
+    background-image: url("../images/fondo2.png");
+    background-size: cover;
+    padding-bottom: 100px;
+    text-align: center;
+  }
+
+  .informacion h1 {
+    font-size: 85px;
+    color: gray;
+    font-weight: bold;
+    margin-top: 60px;
+  }
+
+  .img-tarject-cuatro,
+  .img-tarject-cinco,
+  .img-tarject-seis {
+    display: none;
+  }
+
+  .content-capas-imagenes img {
+    width: 100%;
+  }
+
+  .content-capas-texto {
+    display: none;
+  }
+
+  .botones {
+    width: 100%;
+    margin: 20px 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+  }
+
+  .middle {
+    transform: translate(-50%, -50%);
+    display: flex;
+  }
+  .btn {
+    position: relative;
+    display: block;
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+    border: 2px solid #2ea3f2;
+    padding: 14px 60px;
+    text-transform: uppercase;
+    overflow: hidden;
+    transition: 1s all ease;
+  }
+  .btn::before {
+    background: #2ea3f2;
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+    transition: all 0.6s ease;
+  }
+
+  .btn3::before {
+    width: 100%;
+    height: 0%;
+    transform: translate(-50%, -50%) rotate(45deg);
+  }
+  .btn3:hover::before {
+    height: 380%;
+  }
+
+  .btn4 {
+    background-color: #2ea3f2;
+  }
+
+  /* .btn4::before{
+        width: 100%;
+        height: 0%;
+        transform: translate(50%,50%) rotate(45deg);
+      } */
+
+  /* .btn4:hover::before{
+        height: 380%;
+      } */
+
+  .btn4:hover {
+    background: none;
+    border: 3px solid #2ea3f2;
+  }
+
+  .footer-info-contact {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .card-footer-end {
+    overflow: hidden;
   }
 }
